--- a/geo_display_test2.html
+++ b/geo_display_test2.html
@@ -125,6 +125,7 @@
                 
                 for (i = 0; i < lines.length; i++) {
                 	line = new THREE.Line(lines[i]);
+                	material = new THREE.LineBasicMaterial(
                 	scene.add(line);
                 }
                  
