Title update - no more webface

--- a/index.html
+++ b/index.html
@@ -226,8 +226,11 @@
     <div class = "container_12" style = "background-color: transparent; position:absolute" left:300px; top:150px;">
 	    <div class = "grid_12">
 	        <h1 class ="UI">
-	    			Thornton Tomasetti Webface
+	    			Thornton Tomasetti
 	    	</h1>
+            <h2 class ="UI">
+                Structural Query Engine - Prototype #1123
+            </h2>
 	    </div>
 	    <div class = "clear"></div>
         <div class = "grid_4" id ="dragMe" style ="background-color:rgba(225,225,225,0.3)">
